--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextra-docs-template",
-  "version": "0.0.1",
-  "description": "Nextra docs template",
+  "name": "docs",
+  "version": "1.0.0",
+  "description": "Synrgy Docs Team-C",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,15 +9,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "git+https://github.com/SYNRGY-FP-C/docs.git"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "Khoironi Kurnia Syah <zekhoi.app@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
+    "url": "https://github.com/SYNRGY-FP-C/docs/issues"
   },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "homepage": "https://github.com/SYNRGY-FP-C/docs#readme",
   "dependencies": {
+    "clsx": "^1.2.1",
     "next": "^13.0.6",
     "nextra": "2.0.1",
     "nextra-theme-docs": "2.0.1",
@@ -26,6 +27,17 @@
   },
   "devDependencies": {
     "@types/node": "18.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "^13.1.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3"
   }
 }
