--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs",
   "version": "1.0.0",
-  "description": "Synrgy Docs Team-C",
+  "description": "Synrgy FP Team C Docs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
